5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1758_1580.log
== TEST (2019-05-28 11:23:08) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(soma)
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:08) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(soma)
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:09) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(soma)
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:04) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(soma)
print(maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:23) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2)
print(alunos[maior])
-- ERROR:
File "XXXX", line 29
    print(alunos[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:39) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2)
print(alunos[maior])
-- ERROR:
File "XXXX", line 29
    print(alunos[maior])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:40) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
printO(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:53) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
printO(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:54) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
printO(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:31) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltou = faltou + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
printO(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:30:53) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltaram = ffaltaram + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
printO(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:34:01) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltaram = faltaram + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
printO(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:15) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltaram = faltaram + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
print(alunos[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:39:18) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltaram = faltaram + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
print(alunos[maior])
-- EXECUTION TIME:
0.482214
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:23:26) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))

i = 0
faltaram = 0
passaram = 0
reprovaram = 0
soma = 0
maior = 0

while(i < size(notas)):
	if(notas[i] == -1.0):
		faltaram = faltaram + 1
	elif(notas[i] >= 6.0):
		passaram = passaram + 1
	elif(notas[i] < 6.0 and notas [i] != -1):
		reprovaram = reprovaram + 1
	if(notas[i] != -1):
		soma = soma + notas[i]
	if(notas[i] == max(notas)):
		maior = i
	i = i + 1
print(faltaram)
print(passaram)
print(reprovaram)
print(round(soma / (size(notas) - faltaram), 2))
print(alunos[maior])
-- EXECUTION TIME:
0.455113
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
